feat: order dependencies/dependants with dependants count
